--- a/app/src/main/res/layout/activity_show_info_about_list_element.xml
+++ b/app/src/main/res/layout/activity_show_info_about_list_element.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Really_Really_Dark_Gray">
@@ -24,10 +25,10 @@
 
         <TextView
             android:id="@+id/Title"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="false"
+            android:layout_centerHorizontal="true"
             android:layout_centerInParent="false"
             android:layout_marginTop="32dp"
             android:text="Titolo"
@@ -51,9 +52,9 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignParentEnd="false"
-            android:layout_alignStart="@+id/tag_runtime"
-            android:layout_below="@+id/tag_runtime"
-            android:layout_marginTop="150dp"
+            android:layout_alignStart="@+id/joinChat"
+            android:layout_below="@+id/joinChat"
+            android:layout_marginTop="65dp"
             android:background="@drawable/button_selector"
             android:text="+"
             android:textSize="30sp" />
@@ -65,9 +66,10 @@
             android:layout_marginLeft="140dp"
             android:text="rating"
             android:textSize="30sp"
+            android:layout_marginStart="11dp"
             android:layout_alignBaseline="@+id/tag_rating"
             android:layout_alignBottom="@+id/tag_rating"
-            android:layout_alignEnd="@+id/youtube" />
+            android:layout_toEndOf="@+id/youtube" />
 
         <TextView
             android:id="@+id/year"
@@ -136,12 +138,12 @@
 
         <Button
             android:id="@+id/youtube"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_alignBottom="@+id/add_button"
             android:layout_marginLeft="45dp"
             android:layout_toRightOf="@+id/add_button"
-            android:text="Go to youtube" />
+            android:background="@drawable/yt" />
 
         <TextView
             android:id="@+id/scale"
@@ -185,6 +187,42 @@
             android:text="Duration"
             android:textColor="@color/WhiteSmoke"
             android:textSize="30sp" />
+
+        <Button
+            android:id="@+id/joinChat"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignStart="@+id/tag_runtime"
+            android:layout_below="@+id/tag_runtime"
+            android:layout_marginTop="65dp"
+            android:background="@drawable/chat"
+            android:focusable="false"
+            android:focusableInTouchMode="false" />
+
+        <!--<Button
+            android:id="@+id/eye"
+            android:layout_width="37dp"
+            android:layout_height="37dp"
+            android:layout_alignBaseline="@+id/Title"
+            android:layout_alignBottom="@+id/Title"
+            android:layout_alignEnd="@+id/joinChat"
+            android:layout_marginLeft="15dp"
+            android:background="@drawable/eye"
+            android:clickable="false"
+            android:paddingTop="8dp" />-->
+
+        <Button
+            android:id="@+id/check"
+            android:layout_width="37dp"
+            android:layout_height="37dp"
+            android:layout_alignBaseline="@+id/Title"
+            android:layout_alignBottom="@+id/Title"
+            android:layout_alignEnd="@+id/joinChat"
+            android:layout_marginLeft="15dp"
+            android:layout_toRightOf="@+id/Title"
+            android:background="@drawable/check"
+            android:clickable="false"
+            android:paddingTop="8dp" />
 
     </RelativeLayout>
 </ScrollView>
