--- a/app/src/main/res/layout/film_element.xml
+++ b/app/src/main/res/layout/film_element.xml
@@ -85,5 +85,16 @@
         android:layout_alignBottom="@+id/btnAddToWatch"
         android:layout_toEndOf="@+id/scale" />
 
+    <TextView
+        android:id="@+id/tag_chat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/joinChat"
+        android:layout_below="@+id/joinChat"
+        android:layout_marginLeft="2dp"
+        android:text="Chat"
+        android:textColor="@color/WhiteSmoke"
+        android:textSize="22sp" />
+
 
 </RelativeLayout>
