--- a/app/src/main/res/layout/fragment_watched_list.xml
+++ b/app/src/main/res/layout/fragment_watched_list.xml
@@ -9,18 +9,19 @@
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:layout_below="@+id/tag_minutes_count"
         android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="25dp" />
+
     <com.facebook.login.widget.LoginButton
         android:id="@+id/logout_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:layout_alignBaseline="@+id/login_button"
         android:layout_alignBottom="@+id/login_button"
-        android:layout_toStartOf="@+id/minutes_count" />
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal" />
 
     <com.facebook.share.widget.ShareButton
         android:id="@+id/share"
@@ -43,7 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/tag_minutes_count"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="75dp"
         android:columnWidth="200dp"
         android:gravity="center"
         android:horizontalSpacing="10dp"
