--- a/app/src/main/res/layout/activity_show_info_about_tv_element.xml
+++ b/app/src/main/res/layout/activity_show_info_about_tv_element.xml
@@ -55,8 +55,7 @@
             android:layout_alignStart="@+id/tag_runtime"
             android:layout_below="@+id/tag_runtime"
             android:layout_marginTop="140dp"
-            android:background="@drawable/button_selector"
-            android:text="+"
+            android:background="@drawable/add"
             android:textSize="30sp" />
 
         <TextView
