--- a/app/src/main/res/layout/film_element.xml
+++ b/app/src/main/res/layout/film_element.xml
@@ -43,10 +43,9 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="70dp"
-        android:background="@drawable/button_selector"
+        android:background="@drawable/add"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:text="+"
         android:textSize="30sp"
         android:layout_below="@+id/rating"
         android:layout_alignStart="@+id/rating" />
