--- a/app/src/main/res/layout/chatgroup_layout.xml
+++ b/app/src/main/res/layout/chatgroup_layout.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:src="@drawable/search_icon"
+            android:src="@drawable/chat"
             android:id="@+id/fab"
             android:tint="@android:color/white"
             android:layout_alignParentBottom="true"
