--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -167,7 +167,7 @@
     <color name="Navy">#000080</color>
     <color name="Black">#000000</color>
     <color name="Really_Really_Dark_Gray">#262626</color>
-    <color name="Really_Really_Dark_Grey_But_Not_Too_Much">#1A1A1A</color>
+    <color name="Really_Really_Dark_Grey_But_Not_Too_Much">#1a1a1a</color>
     <color name="The_nicest_green_for_button_and_stuff">#1ab14a</color>
     <color name="A_fucking_transparent_white">#caffffff</color>
 
