--- a/app/src/main/res/layout/chatgroup_layout.xml
+++ b/app/src/main/res/layout/chatgroup_layout.xml
@@ -1,49 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/Really_Really_Dark_Grey_But_Not_Too_Much"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.simone.whatwatch.ChatGroup.ChatGroup">
-     
-        <android.support.design.widget.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:src="@drawable/chat"
-            android:id="@+id/fab"
-            android:tint="@android:color/white"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            app:fabSize="mini" />
-     
-        <android.support.design.widget.TextInputLayout
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:clickable="true"
+        android:src="@drawable/chat"
+        android:tint="@android:color/white"
+        app:backgroundTint="@color/Really_Really_Dark_Grey_But_Not_Too_Much"
+        app:fabSize="mini" />
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@id/fab">
+
+        <EditText
+            android:id="@+id/input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/fab"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true">
-     
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Input"
-                android:id="@+id/input" />
-        </android.support.design.widget.TextInputLayout>
-     
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_above="@id/fab"
-            android:dividerHeight="16dp"
-            android:divider="@android:color/transparent"
-            android:id="@+id/list_of_messages"
-            android:layout_marginBottom="16dp"/>
-    </RelativeLayout>
+            android:hint="Input"
+            android:textColorLink="@color/Really_Really_Dark_Grey_But_Not_Too_Much" />
+    </android.support.design.widget.TextInputLayout>
+
+    <ListView
+        android:id="@+id/list_of_messages"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/fab"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="16dp"
+        android:background="@color/Really_Really_Dark_Grey_But_Not_Too_Much"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="16dp" />
+</RelativeLayout>
