--- a/app/src/main/res/layout/chatgroup_layout.xml
+++ b/app/src/main/res/layout/chatgroup_layout.xml
@@ -46,12 +46,12 @@
         android:layout_above="@id/fab"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="16dp"
+        android:layout_marginTop="50dp"
         android:background="@color/Really_Really_Dark_Grey_But_Not_Too_Much"
         android:divider="@android:color/transparent"
         android:dividerHeight="16dp"
         android:stackFromBottom="true"
-        android:transcriptMode="alwaysScroll"
-        android:layout_marginTop="40dp"/>
+        android:transcriptMode="alwaysScroll" />
 
 
     <TextView
@@ -60,8 +60,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:textSize="30sp"
+        android:elevation="0dp"
         android:text="Test titolo"
         android:textColor="@color/White"
+        android:textSize="35sp" />
         />
 </RelativeLayout>
