--- a/app/src/main/res/layout/chatgroup_layout.xml
+++ b/app/src/main/res/layout/chatgroup_layout.xml
@@ -36,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Input"
+            android:textColor="@color/WhiteSmoke"
             android:textColorLink="@color/Really_Really_Dark_Grey_But_Not_Too_Much" />
     </android.support.design.widget.TextInputLayout>
 
