--- a/app/src/main/res/layout/chatgroup_layout.xml
+++ b/app/src/main/res/layout/chatgroup_layout.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Really_Really_Dark_Grey_But_Not_Too_Much"
+    android:background="@color/dark_grey_but_not_important_as_the_other"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -21,23 +21,25 @@
         android:clickable="true"
         android:src="@drawable/chat"
         android:tint="@android:color/white"
-        app:backgroundTint="@color/Really_Really_Dark_Grey_But_Not_Too_Much"
-        app:fabSize="mini" />
+        app:backgroundTint="@color/dark_grey_but_not_important_as_the_other"
+        app:elevation="0dp"
+        app:fabSize="mini"
+        app:rippleColor="@color/dark_grey_but_not_important_as_the_other" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_toStartOf="@id/fab">
+        android:layout_toStartOf="@id/fab"
+        android:theme="@style/TextLabel">
 
         <EditText
             android:id="@+id/input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Input"
-            android:textColor="@color/WhiteSmoke"
-            android:textColorLink="@color/Really_Really_Dark_Grey_But_Not_Too_Much" />
+            android:hint="Message:"
+            android:textColor="@color/WhiteSmoke" />
     </android.support.design.widget.TextInputLayout>
 
     <ListView
@@ -48,9 +50,10 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="16dp"
         android:layout_marginTop="70dp"
-        android:background="@color/Really_Really_Dark_Grey_But_Not_Too_Much"
+        android:background="@color/dark_grey_but_not_important_as_the_other"
         android:divider="@android:color/transparent"
         android:dividerHeight="16dp"
+        android:paddingBottom="13dp"
         android:stackFromBottom="true"
         android:transcriptMode="alwaysScroll" />
 
@@ -65,7 +68,6 @@
         android:text="Test titolo"
         android:textColor="@color/White"
         android:textSize="45sp" />
-        />
 
     <Button
         android:id="@+id/exit"
@@ -74,7 +76,10 @@
         android:layout_alignBottom="@+id/title"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:backgroundTint="@android:color/holo_red_dark"
+        android:background="@color/red"
+        android:gravity="center"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
         android:text="Exit from chat"
         android:textColor="@color/WhiteSmoke" />
 
@@ -84,9 +89,12 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/exit"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/exit"
-        android:backgroundTint="@color/green_temp"
+        android:background="@color/green_temp"
+        android:gravity="center"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
         android:text="Join chat"
-        android:textColor="@color/WhiteSmoke"
-        android:layout_alignParentTop="true" />
+        android:textColor="@color/WhiteSmoke" />
 </RelativeLayout>
