--- a/app/src/main/res/layout/messageitem.xml
+++ b/app/src/main/res/layout/messageitem.xml
@@ -1,25 +1,27 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Really_Really_Dark_Grey_But_Not_Too_Much">
+    android:background="@color/dark_grey_but_not_important_as_the_other">
 
     <TextView
         android:id="@+id/message_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentTop="false"
         android:text="User 1"
         android:textColor="@color/WhiteSmoke"
-        android:textStyle="normal|bold"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:textStyle="bold|italic" />
 
     <TextView
         android:id="@+id/message_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/message_user"
-        android:layout_alignParentEnd="true"
+        android:layout_alignBottom="@+id/message_text"
+        android:layout_alignParentEnd="false"
+        android:layout_marginStart="30dp"
+        android:layout_toEndOf="@+id/message_text"
         android:text="Orario"
         android:textColor="@color/WhiteSmoke" />
 
@@ -28,8 +30,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignStart="@+id/message_user"
         android:layout_below="@+id/message_user"
         android:layout_marginTop="5dp"
+        android:maxWidth="400dp"
         android:text="Test messaggio"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/WhiteSmoke"
