--- a/app/src/main/res/layout/activity_show_info_about_tv_element.xml
+++ b/app/src/main/res/layout/activity_show_info_about_tv_element.xml
@@ -20,8 +20,7 @@
             android:layout_alignParentStart="true"
             android:layout_below="@+id/creators"
             android:layout_marginStart="23dp"
-            android:layout_marginTop="15dp"
-            app:srcCompat="@color/colorPrimary" />
+            android:layout_marginTop="15dp" />
 
         <TextView
             android:id="@+id/Title"
