--- a/app/src/main/res/layout/activity_show_info_about_tv_element.xml
+++ b/app/src/main/res/layout/activity_show_info_about_tv_element.xml
@@ -213,5 +213,17 @@
             android:clickable="false"
             android:paddingTop="8dp"
             android:visibility="invisible"/>
+
+        <TextView
+            android:id="@+id/tag_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/add_button"
+            android:layout_below="@+id/add_button"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="0dp"
+            android:text="Add"
+            android:textColor="@color/WhiteSmoke"
+            android:textSize="22sp" />
     </RelativeLayout>
 </ScrollView>
