--- a/app/src/main/res/layout/chatgroup_layout.xml
+++ b/app/src/main/res/layout/chatgroup_layout.xml
@@ -65,6 +65,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:elevation="0dp"
+        android:maxWidth="800dp"
         android:text="Test titolo"
         android:textColor="@color/White"
         android:textSize="45sp" />
