--- a/app/src/main/res/layout-land/activity_show_info_about_list_element.xml
+++ b/app/src/main/res/layout-land/activity_show_info_about_list_element.xml
@@ -53,7 +53,7 @@
             android:layout_alignStart="@+id/rating"
             android:layout_below="@+id/runtime"
             android:layout_marginTop="100dp"
-            android:background="@drawable/button_selector"
+            android:background="@drawable/add"
             android:text="+"
             android:textSize="30sp" />
 
